Rough first cut

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>This is a site</title>
   </head>
   <body>
-    Hello!
+    <div style="background: #FFFFFF; color:#EEEEEE;">Hello!</div>
   </body>
 </html>
