--- a/site/login.html
+++ b/site/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dashboard</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="static/normalize.css" />
     <link rel="stylesheet" type="text/css" href="static/styles.css" />
-    <script type="text/javascript" src="static/dashboard.js"></script>
+    <script type="text/javascript" src="static/login.js"></script>
   </head>
   <body>
-    <div>DASHBOARD</div>
+    <div>Login</div>
   </body>
 </html>
