--- a/site/login.html
+++ b/site/login.html
@@ -11,5 +11,11 @@
   </head>
   <body>
     <div>Login</div>
+    <form method="POST">
+      <input type="text" name="username" />
+      <input type="password" name="password" />
+
+      <input type="submit" />
+    </form>
   </body>
 </html>
