--- a/site/login.html
+++ b/site/login.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="static/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="static/styles.css" />
+    <link rel="stylesheet" type="text/css" href="static/shared.css" />
+    <link rel="stylesheet" type="text/css" href="static/login.css" />
     <script type="text/javascript" src="static/login.js"></script>
   </head>
   <body>
