--- a/site/dashboard.html
+++ b/site/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="static/normalize.css" />
     <link rel="stylesheet" type="text/css" href="static/shared.css" />
     <link rel="stylesheet" type="text/css" href="static/dashboard.css" />
-    <script type="text/javascript" src="static/dashboard.js"></script>
+    <script defer type="text/javascript" src="static/dashboard.js"></script>
   </head>
   <body>
     <div class="nav">
@@ -45,7 +45,7 @@
             <div class="service issue">
               <div>Payments</div>
               <div>
-                <div><a href="#">Click here</a> for more information</div>
+                <a href="#">Click here</a> for more information
 
                 <div class="details hidden">
                   <p>
