--- a/site/login.html
+++ b/site/login.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login</title>
+    <title>Log in</title>
     <link rel="stylesheet" type="text/css" href="static/normalize.css" />
     <link rel="stylesheet" type="text/css" href="static/shared.css" />
     <link rel="stylesheet" type="text/css" href="static/login.css" />
     <script type="text/javascript" src="static/login.js"></script>
   </head>
   <body>
-    <div>Login</div>
-    <form method="POST">
-      <input type="text" name="username" />
-      <input type="password" name="password" />
+    <div class="centred">
+      <form class="login-form" method="POST">
+        <input type="text" placeholder="Username" name="username" />
+        <input type="password" placeholder="Password" name="password" />
 
-      <input type="submit" />
-    </form>
+        <input type="submit" value="Log in" />
+      </form>
+    </div>
   </body>
 </html>
