--- a/site/login.html
+++ b/site/login.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="static/normalize.css" />
     <link rel="stylesheet" type="text/css" href="static/shared.css" />
     <link rel="stylesheet" type="text/css" href="static/login.css" />
-    <script type="text/javascript" src="static/login.js"></script>
+    <script async type="text/javascript" src="static/login.js"></script>
   </head>
   <body>
     <div class="centred">
-      <form class="login-form" method="POST">
+      <form class="login-form" method="POST" enctype="multipart/form-data">
         <input type="text" placeholder="Username" name="username" />
         <input type="password" placeholder="Password" name="password" />
 
