--- a/site/login.html
+++ b/site/login.html
@@ -13,8 +13,19 @@
   <body>
     <div class="centred">
       <form class="login-form" method="POST" enctype="multipart/form-data">
-        <input type="text" placeholder="Username" name="username" />
-        <input type="password" placeholder="Password" name="password" />
+        <input
+          type="text"
+          autocapitalize="none"
+          placeholder="Username"
+          name="username"
+          required
+        />
+        <input
+          type="password"
+          placeholder="Password"
+          name="password"
+          required
+        />
 
         <input type="submit" value="Log in" />
       </form>
